--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,8 @@
 
 // Components
 @import "./components/Tag/Tag";
+@import "./components/Tag/TagGroup";
 @import "./components//Button//Button";
-@import "./components/Button/ButtonGroup.scss";
-@import "./components/Divider/Divider.scss";
-@import "./components/Card/Card.scss";
+@import "./components/Button/ButtonGroup";
+@import "./components/Divider/Divider";
+@import "./components/Card/Card";
