make outlined bg color transparent

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -8,6 +8,10 @@
   transition: 0.3s;
   color: $black10;
 
+  &.is-outlined {
+    background-color: transparent;
+  }
+
   &[disabled] {
     opacity: 0.5;
     cursor: not-allowed;
@@ -37,7 +41,6 @@
 
     &.is-outlined {
       color: $gray60;
-      background-color: $white00;
 
       &:hover {
         background-color: $gray60;
@@ -58,7 +61,6 @@
 
     &.is-outlined {
       color: $black10;
-      background-color: $white00;
 
       &:hover {
         color: $white00;
