--- a/src/index.scss
+++ b/src/index.scss
@@ -10,3 +10,6 @@
 @import "./components/Button/ButtonGroup";
 @import "./components/Divider/Divider";
 @import "./components/Card/Card";
+
+// Layouts
+@import "./layout/Column/Column"
