format scss using prettier

--- a/src/components/Tag/Tag.scss
+++ b/src/components/Tag/Tag.scss
@@ -21,7 +21,7 @@
   &.is-transparent {
     color: $white00;
     border-color: $white00;
-    background-color: "transparent";
+    background-color: 'transparent';
 
     &:hover,
     &:focus {
