--- a/src/index.scss
+++ b/src/index.scss
@@ -1,15 +1,15 @@
 // Styles
-@import "./styles/normalize";
-@import "./styles/global";
-@import "./styles/colors";
+@import './styles/normalize';
+@import './styles/global';
+@import './styles/colors';
 
 // Components
-@import "./components/Tag/Tag";
-@import "./components/Tag/TagGroup";
-@import "./components//Button//Button";
-@import "./components/Button/ButtonGroup";
-@import "./components/Divider/Divider";
-@import "./components/Card/Card";
+@import './components/Tag/Tag';
+@import './components/Tag/TagGroup';
+@import './components//Button//Button';
+@import './components/Button/ButtonGroup';
+@import './components/Divider/Divider';
+@import './components/Card/Card';
 
 // Layouts
-@import "./layout/Column/Column"
+@import './layout/Column/Column';
