--- a/src/layout/Column/Column.scss
+++ b/src/layout/Column/Column.scss
@@ -10,7 +10,7 @@ $column-gap: 0.75rem;
   @for $i from 0 through 12 {
     &.is-#{$i} {
       flex: none;
-      width: percentage($i / 12)
+      width: percentage($i / 12);
     }
   }
 }
@@ -19,10 +19,10 @@ $column-gap: 0.75rem;
   display: flex;
   margin-top: (-$column-gap);
   margin-left: (-$column-gap);
-  margin-right:  (-$column-gap);
+  margin-right: (-$column-gap);
 
   &:last-of-type {
-    margin-bottom: (-$column-gap)
+    margin-bottom: (-$column-gap);
   }
 
   &:not(:last-of-type) {
@@ -32,7 +32,7 @@ $column-gap: 0.75rem;
   &.is-gap-none {
     margin-left: 0;
     margin-right: 0;
-    
+
     .pl-column {
       padding-left: 0;
       padding-right: 0;
@@ -57,7 +57,7 @@ $column-gap: 0.75rem;
       padding-left: 1.25rem;
       padding-right: 1.25rem;
     }
-  }  
+  }
 
   &.is-gap-large {
     margin-left: -2rem;
@@ -67,5 +67,5 @@ $column-gap: 0.75rem;
       padding-left: 2rem;
       padding-right: 2rem;
     }
-  }  
+  }
 }
