breakpoint / media query

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 @import './styles/normalize';
 @import './styles/global';
 @import './styles/colors';
+@import './styles/breakpoint';
 
 // Components
 @import './components/Tag/Tag';
