--- a/src/components/Button/_Button.scss
+++ b/src/components/Button/_Button.scss
@@ -25,7 +25,7 @@
     border-color: $white00;
 
     &:hover {
-      background-color: $gray20;
+      background-color: $white10;
     }
 
     &[disabled] {
