--- a/src/components/Divider/_Divider.scss
+++ b/src/components/Divider/_Divider.scss
@@ -1,10 +1,11 @@
 .pl-divider {
   border: none;
   border-top: 1px solid $gray60;
-  // width: 90%;
   height: 1px;
   color: $white00;
   background-color: $white00;
+  margin-top: 0;
+  margin-bottom: 0;
 
   &.is-dashed {
     border: none;
