--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,13 @@
+// Styles
+@import './styles/font';
+@import './styles/normalize';
+@import './styles/colors';
+@import './styles/global';
+@import './styles/breakpoint';
+
 // Helpers
 @import './helpers/responsive/mq';
 @import './helpers/spacing/modifier';
-
-// Styles
-@import './styles/normalize';
-@import './styles/global';
-@import './styles/colors';
-@import './styles/breakpoint';
 
 // Components
 @import './components/Tag/Tag';
