--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,7 +1,18 @@
 html {
-  font-family: YakuHanJPs_Narrow, Roboto, 游ゴシック, 'Yu Gothic', YuGothic,
-    'Hiragino Kaku Gothic ProN', 'Hiragino Kaku Gothic Pro', メイリオ, Meiryo,
-    sans-serif !important;
+  font-family: $global-font !important;
+}
+
+body {
+  color: $text;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: $text-strong;
 }
 
 a {
