--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -16,6 +16,7 @@ $blue50: #337ab7;
 $cyan10: #f0f6f8;
 $cyan40: #a4dae6;
 $cyan50: #84cad9;
+$blue-gray20: #e7eeef;
 $blue-gray30: #e4e8e9;
 $blue-gray40: #b8bec6;
 $blue-gray50: #9ca4b0;
