--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -17,8 +17,8 @@ $cyan10: #f0f6f8;
 $cyan40: #a4dae6;
 $cyan50: #84cad9;
 $blue-gray20: #e7eeef;
-$blue-gray30: #e4e8e9;
-$blue-gray40: #b8bec6;
+$blue-gray30: #d2d6db;
+$blue-gray40: #b5bbc4;
 $blue-gray50: #9ca4b0;
 $blue-gray-60: #7c838f;
 
@@ -50,6 +50,8 @@ $link-invert: $white00;
 
 // border
 $border: $gray50;
+$border-light: $gray40;
+$border-strong: $black10;
 $border-invert: $white00;
 
 // background
