update tag style

--- a/src/_index.scss
+++ b/src/_index.scss
@@ -4,6 +4,7 @@
 @import './styles/colors';
 @import './styles/global';
 @import './styles/breakpoint';
+@import './styles/radius';
 
 // Helpers
 @import './helpers/responsive/mq';
