--- a/src/styles/_radius.scss
+++ b/src/styles/_radius.scss
@@ -1,3 +1,3 @@
-$radius: '2px';
-$radius-large: '5px';
-$radius-rounded: '290486px';
+$radius: 2px;
+$radius-large: 5px;
+$radius-rounded: 290486px;
