--- a/src/_index.scss
+++ b/src/_index.scss
@@ -17,6 +17,7 @@
 @import './components/Button/ButtonGroup';
 @import './components/Divider/Divider';
 @import './components/Card/Card';
+@import './components/Pagination/Pagination';
 
 // Layouts
 @import './layout/Column/Column';
