--- a/src/components/Pagination/_Pagination.scss
+++ b/src/components/Pagination/_Pagination.scss
@@ -49,6 +49,10 @@ $prev-next-size: 72px;
   margin-left: 5px;
   margin-right: 5px;
 
+  a {
+    color: $black10;
+  }
+
   &:hover {
     cursor: pointer;
     background-color: $gray40;
@@ -58,6 +62,10 @@ $prev-next-size: 72px;
     color: $white00;
     background-color: $black20;
     cursor: default;
+
+    a {
+      color: $white00;
+    }
   }
 }
 
