--- a/src/_index.scss
+++ b/src/_index.scss
@@ -18,6 +18,7 @@
 @import './components/Divider/Divider';
 @import './components/Card/Card';
 @import './components/Pagination/Pagination';
+@import './components/Tab/Tab';
 
 // Layouts
 @import './layout/Column/Column';
