tab line-height

--- a/src/components/Tab/_Tab.scss
+++ b/src/components/Tab/_Tab.scss
@@ -15,6 +15,7 @@
   margin-right: 0.3rem;
   border-bottom: 3px solid $white00 !important;
   box-shadow: none !important;
+  line-height: 1.8;
 
   &:hover,
   &:active {
