--- a/src/components/Tab/_Tab.scss
+++ b/src/components/Tab/_Tab.scss
@@ -1,10 +1,8 @@
 .pl-tab-group {
   display: flex;
   align-items: center;
-
-  @include mq(small) {
-    overflow: auto;
-  }
+  overflow: auto;
+  white-space: nowrap;
 }
 
 .pl-tab {
