company logo component

--- a/src/_index.scss
+++ b/src/_index.scss
@@ -19,6 +19,7 @@
 @import './components/Card/Card';
 @import './components/Pagination/Pagination';
 @import './components/Tab/Tab';
+@import './components/CompanyLogo/CompanyLogo';
 
 // Layouts
 @import './layout/Column/Column';
