--- a/src/components/CompanyLogo/_CompanyLogo.scss
+++ b/src/components/CompanyLogo/_CompanyLogo.scss
@@ -3,11 +3,14 @@
   padding: 2px;
   border-radius: 2px;
   background-color: $white00;
-  width: 60px;
-  height: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
+
+  &.is-normal {
+    width: 60px;
+    height: 60px;
+  }
 
   &.is-medium {
     width: 78px;
