--- a/src/_index.scss
+++ b/src/_index.scss
@@ -20,6 +20,7 @@
 @import './components/Pagination/Pagination';
 @import './components/Tab/Tab';
 @import './components/CompanyLogo/CompanyLogo';
+@import './components/Tooltip/Tooltip';
 
 // Layouts
 @import './layout/Column/Column';
