--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -16,9 +16,8 @@ $blue50: #337ab7;
 $cyan10: #f0f6f8;
 $cyan40: #a4dae6;
 $cyan50: #84cad9;
-$cyan60: #02B3C8;
+$cyan60: #02b3c8;
 $cyan70: #0fa3b3;
-
 $blue-gray20: #e7eeef;
 $blue-gray30: #d2d6db;
 $blue-gray40: #b5bbc4;
