update button style

--- a/src/components/Tag/_Tag.scss
+++ b/src/components/Tag/_Tag.scss
@@ -1,6 +1,6 @@
 .pl-tag {
   padding: 5px 12px;
-  border-radius: $radius-rounded;
+  border-radius: $radius-round;
   border-width: 1px;
   border-style: solid;
   font-size: 13px;
