--- a/src/components/Pagination/_Pagination.scss
+++ b/src/components/Pagination/_Pagination.scss
@@ -6,6 +6,24 @@ $prev-next-size: 72px;
   align-items: center;
 }
 
+.pl-pagination-item,
+.pl-pagination-previous,
+.pl-pagination-next {
+  @include mq(small) {
+    height: 35px;
+    width: 35px;
+  }
+
+  &:hover,
+  a:hover {
+    text-decoration: none;
+
+    &.is-disabled {
+      cursor: default;
+    }
+  }
+}
+
 .pl-pagination-previous,
 .pl-pagination-next {
   background-color: $gray30;
@@ -35,6 +53,7 @@ $prev-next-size: 72px;
 
   padding-left: 5px;
   padding-right: 5px;
+  margin: 0;
 }
 
 .pl-pagination-item {
