Stop using template literal

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -33,7 +33,7 @@ $newspicks: #222;
 $wantedly: #00aed1;
 
 // Graduation
-$grad-black: linear-gradient(225deg, $black20 0%, $black30 62%, $black10 100%);
+$grad-black: linear-gradient(225deg, #2a2a2a 0%, #333 62%, #161616 100%);
 $grad-deep-green: linear-gradient(225deg, #3ba395 0%, #21789a 100%);
 $grad-orange-pink: linear-gradient(
   225deg,
