Justify-content center paggination content

--- a/src/components/Pagination/_Pagination.scss
+++ b/src/components/Pagination/_Pagination.scss
@@ -4,6 +4,7 @@ $prev-next-size: 72px;
 .pl-pagination {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .pl-pagination-item,
