--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -42,6 +42,7 @@ $grad-orange-pink: linear-gradient(
   #fe7333 100%
 );
 $grad-silver: linear-gradient(225deg, #e6e9ed 0%, #eef1f6 50%, #d1d8dc 100%);
+$grad-pale-blue: linear-gradient(268deg, #c1dcf2 94%, #8db6e0 8%);
 
 // text
 $text: $black30;
