remove bold style from tab count when active

--- a/src/components/Tab/_Tab.scss
+++ b/src/components/Tab/_Tab.scss
@@ -39,6 +39,10 @@
   }
 }
 
+.pl-tab.is-active .pl-tab-count {
+  font-weight: normal;
+}
+
 .pl-tab-count {
   margin-left: 8px;
   margin-right: -4px;
