--- a/src/components/Pagination/_Pagination.scss
+++ b/src/components/Pagination/_Pagination.scss
@@ -67,13 +67,15 @@ $prev-next-size: 72px;
   margin-left: 5px;
   margin-right: 5px;
 
-  > a, div, span {
+  > a,
+  div,
+  span {
     display: flex;
     align-items: center;
     justify-content: center;
     color: $black10;
     padding: 10px 18px; // almost 44x44 size
-    max-width: 44px
+    max-width: 44px;
   }
 
   &:hover {
