--- a/src/styles/_font.scss
+++ b/src/styles/_font.scss
@@ -1,5 +1,5 @@
-$global-font: Roboto,YakuHanJPs_Narrow,'Yu Gothic Medium', '游ゴシック Medium', YuGothic,
-  '游ゴシック体',Hiragino Kaku Gothic ProN,Hiragino Kaku Gothic Pro,メイリオ,Meiryo,
-  sans-serif;
+$global-font: Roboto, YakuHanJPs_Narrow, 'Yu Gothic Medium', '游ゴシック Medium',
+  YuGothic, '游ゴシック体', Hiragino Kaku Gothic ProN, Hiragino Kaku Gothic Pro,
+  メイリオ, Meiryo, sans-serif;
 
 $display-font: brandon-grotesque, sans-serif;
