np_startup: new tab group

--- a/src/_index.scss
+++ b/src/_index.scss
@@ -19,6 +19,8 @@
 @import './components/Card/Card';
 @import './components/Pagination/Pagination';
 @import './components/Tab/Tab';
+// 新しいTabのデザインの検証が終われば消す
+@import './components/NewTab/NewTab';
 @import './components/CompanyLogo/CompanyLogo';
 @import './components/Tooltip/Tooltip';
 
