--- a/src/components/Tab/_Tab.scss
+++ b/src/components/Tab/_Tab.scss
@@ -3,43 +3,56 @@
   align-items: center;
   overflow: auto;
   white-space: nowrap;
+  gap: 4px;
 }
 
-.pl-tab {
-  color: $black30;
-  font-size: 14px;
-  padding: 16px 16px 12px;
-  border-bottom: 3px solid $white00 !important;
-  box-shadow: none !important;
-  line-height: 1.25;
+.pl-tab.pl-local-navigation {
   display: flex;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
+  padding: 10px 16px;
+  background: $gray40;
+  border: 1px solid $gray50;
+  border-radius: 32px;
+  flex: none;
+  flex-grow: 0;
+  line-height: 1;
+  font-size: 12px;
+  font-weight: 400;
+  color: $black10;
+  height: 32px;
 
   &:hover,
   &:active {
-    color: $text-strong;
-    text-decoration: none;
+    background: $gray50 !important;
   }
 
   &:focus {
-    color: $text-strong;
-    text-decoration: none;
+    background: $gray50 !important;
   }
 
   &.is-active {
-    font-weight: 900;
-    color: $text-strong !important;
-    border-bottom: 3px solid $text-strong !important;
+    color: $white00 !important;
+    background: $black10 !important;
+  }
+
+  &.is-disabled,
+  &:hover.is-disabled {
+    cursor: default;
+    color: $gray70 !important;
+    background: $gray30 !important;
+  }
+
+  &:hover.is-active {
+    color: $white00 !important;
+    background: $black30 !important;
   }
 }
 
-.pl-tab.is-active .pl-tab-count {
-  font-weight: normal;
-}
-
 .pl-tab-count {
-  margin-left: 8px;
+  margin-left: 4px;
   margin-right: -4px;
-  font-size: 14px;
+  font-size: 11px;
   color: $gray80;
 }
