--- a/src/styles/_font.scss
+++ b/src/styles/_font.scss
@@ -1,3 +1,4 @@
-$global-font: Roboto, YakuHanJPs_Narrow, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+$global-font: Roboto, YakuHanJPs_Narrow, -apple-system, BlinkMacSystemFont,
+  'Segoe UI', sans-serif;
 
 $display-font: brandon-grotesque, sans-serif;
