不要色の削除とfacebookカラーの更新とか

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -27,24 +27,11 @@ $blue-gray50: #9ca4b0;
 $blue-gray-60: #7c838f;
 
 // SNS
-$facebook: #3b5998;
+$facebook: #1877F2;
 $twitter: #1da1f2;
-$hatena: #00a4de;
-$pocket: #ef4056;
 $newspicks: #222;
-$wantedly: #00aed1;
 
 // Graduation
-$grad-black: linear-gradient(225deg, $black20 0%, $black30 62%, $black10 100%);
-$grad-deep-green: linear-gradient(225deg, #3ba395 0%, #21789a 100%);
-$grad-orange-pink: linear-gradient(
-  225deg,
-  #d754ad 0%,
-  #f96785 59%,
-  #fe7333 100%
-);
-$grad-silver: linear-gradient(225deg, #e6e9ed 0%, #eef1f6 50%, #d1d8dc 100%);
-$grad-pale-blue: linear-gradient(268deg, #c1dcf2 8%, #8db6e0 94%);
 
 // text
 $text: $black30;
