actionsのprettierとずれがあったので揃えた

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -27,7 +27,7 @@ $blue-gray50: #9ca4b0;
 $blue-gray-60: #7c838f;
 
 // SNS
-$facebook: #1877F2;
+$facebook: #1877f2;
 $twitter: #1da1f2;
 $newspicks: #222;
 
