cyan20 と cyan30 を追加した

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -16,6 +16,8 @@ $red70: #c7433c;
 $brown30: #ece8e7;
 $blue50: #337ab7;
 $cyan10: #f0f6f8;
+$cyan20: #d8ecf0;
+$cyan30: #c8e8ef;
 $cyan40: #a4dae6;
 $cyan50: #84cad9;
 $cyan60: #02b3c8;
