--- a/src/components/Tooltip/_Tooltip.scss
+++ b/src/components/Tooltip/_Tooltip.scss
@@ -92,6 +92,7 @@
       animation-fill-mode: forwards;
       animation-timing-function: ease-in;
       animation-delay: 0.1s;
+      opacity: 1;
     }
   }
 }
