--- a/src/components/Pagination/_Pagination.scss
+++ b/src/components/Pagination/_Pagination.scss
@@ -1,34 +1,24 @@
-$item-size: 32px;
-$prev-next-size: 32px;
-
 .pl-pagination {
   display: flex;
   align-items: center;
   justify-content: center;
+  grid-column-gap: 8px;
 }
 
 .pl-pagination-item,
 .pl-pagination-previous,
-.pl-pagination-next {
-  @include mq(small) {
-    height: 32px;
-    width: 32px;
-  }
+.pl-pagination-next,
+.pl-pagination-ellipsis {
+  min-height: 32px;
+  min-width: 32px;
 
-  &:hover,
-  a:hover {
+  > a:hover {
     text-decoration: none;
-    &.is-disabled {
-      cursor: default;
-    }
   }
 }
 
 .pl-pagination-previous,
 .pl-pagination-next {
-  background-color: none;
-  height: $item-size;
-  width: $prev-next-size;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -40,12 +30,10 @@ $prev-next-size: 32px;
     font-weight: bold;
   }
 
-  &:not(.is-disabled) {
-    background-color: transparent;
-    &:hover {
-      background-color: $gray30;
-    }
+  &:not(.is-disabled):hover {
+    background-color: $gray30;
   }
+
   &.is-disabled {
     cursor: default;
     i {
@@ -55,46 +43,43 @@ $prev-next-size: 32px;
 }
 
 .pl-pagination-list {
+  margin: 0;
+  padding: 0;
   display: flex;
   align-items: center;
-
-  padding-left: 6px;
-  padding-right: 6px;
-  margin: 0;
+  justify-content: center;
+  grid-column-gap: 4px;
 }
 
 .pl-pagination-item {
-  font-size: 14px;
-  line-height: 14px;
-  color: $black10;
-  font-family: Roboto;
-  align-items: center;
   display: flex;
-  justify-content: center;
-  margin-left: 2px;
-  margin-right: 2px;
-  border-radius: 4px;
+  align-items: stretch;
   border: 1px solid $border;
+  border-radius: 4px;
+  color: $black10;
+  font-size: 14px;
+  line-height: 1;
+  font-family: Roboto;
 
   > a,
   > div,
   > span {
+    width: 100%;
+    padding-inline: 4px;
     display: flex;
     align-items: center;
     justify-content: center;
     color: $black10;
-    padding: 8px 4px 8px 4px;
-    min-width: 32px;
   }
 
   &:hover:not(.is-active) {
-    cursor: pointer;
     background-color: $gray30;
   }
 
   &.is-active {
     color: $white00;
     background-color: $black10;
+    border-color: $black10;
     cursor: default;
 
     > a,
@@ -106,13 +91,10 @@ $prev-next-size: 32px;
 }
 
 .pl-pagination-ellipsis {
-  color: $black10;
-  font-size: 12px;
-  color: $black10;
-  font-family: Robot;
-  width: 20px;
-  height: 30px;
-  align-items: flex-end;
   display: flex;
+  align-items: flex-end;
   justify-content: center;
+  color: $black10;
+  font-size: 14px;
+  font-family: Robot;
 }
