paginationスタイル調整

--- a/src/components/Pagination/_Pagination.scss
+++ b/src/components/Pagination/_Pagination.scss
@@ -54,6 +54,7 @@
 .pl-pagination-item {
   display: flex;
   align-items: stretch;
+  background: $white00;
   border: 1px solid $border;
   border-radius: 4px;
   color: $black10;
