--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -9,7 +9,7 @@ $gray50: #e0e0e0;
 $gray60: #ccc;
 $gray70: #aaa;
 $gray80: #929292;
-$gray90: #666;
+$gray90: #6F6F6F;
 $red50: #ea6e67;
 $red60: #e7574f;
 $red70: #c7433c;
@@ -39,7 +39,7 @@ $newspicks: #222;
 $text: $black30;
 $text-invert: $white00;
 $text-strong: $black10;
-$text-light: $gray80;
+$text-light: $gray90;
 $link: $blue50;
 $link-invert: $white00;
 
