--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -9,7 +9,7 @@ $gray50: #e0e0e0;
 $gray60: #ccc;
 $gray70: #aaa;
 $gray80: #929292;
-$gray90: #6F6F6F;
+$gray90: #6f6f6f;
 $red50: #ea6e67;
 $red60: #e7574f;
 $red70: #c7433c;
